[project]
name = "vendi-kv-cache"
version = "0.1.0"
description = "KV cache compression experiments with transformer models"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "torch>=2.0",
    "transformers==4.45.0",
    "vllm>=0.6.0",
    "accelerate",
    "huggingface-hub",
    "datasets",
    "click",
    "matplotlib",
    "seaborn",
    "numpy",
]